[package]
name = "shm-decimate"
version = "0.0.0-git"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
fs2 = "0.4.3"
indicatif = "0.17.6"
log = "0.4.20"
pretty_env_logger = "0.5.0"
walkdir = "2.3.3"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
